opdc/91th/source/sample/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egov-sample
spec:
  selector:
    app: egov-sample
  ports:
  - port: 8080
    targetPort: 8080
